Added table to measurement notebook

--- a/workflows/table_to_measurement_converter.ipynb
+++ b/workflows/table_to_measurement_converter.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table Downloader\n",
+    "# Table to Measurement Converter\n",
     "__authors__: ufukbombar@gmail.com\n",
     "\n",
     "__date__: 2024-11-18\n",
     "\n",
-    "__goal__: This notebook downloads the latest table names to the data folder."
+    "__goal__: This notebook converts the table names into measurement data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the output of table_downloader\n",
+    "input_tables_name = \"../data/tables/tables-2024-11-18 20:10:39.feather\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [00:01,  5.29it/s]lt: 8MB [00:01,  6.07MB/s]\n",
-      "Running the query result: 8MB [00:01,  4.69MB/s]\n"
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100555it [00:01, 76402.11it/s]\n"
      ]
     },
     {
@@ -98,72 +114,170 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>measurement_uuid</th>\n",
+       "      <th>type</th>\n",
+       "      <th>cleaned</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>agent_uuid</th>\n",
        "      <th>table_name</th>\n",
-       "      <th>creation_date</th>\n",
+       "      <th>retrieved</th>\n",
+       "      <th>processed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>007046a9_518e_46cb_8e70_e598b8bce831</td>\n",
+       "      <td>links</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cleaned_links</td>\n",
+       "      <td>400a3c9b_57ed_4315_9489_917e601f3604</td>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:54.249173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>007046a9_518e_46cb_8e70_e598b8bce831</td>\n",
+       "      <td>links</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cleaned_links</td>\n",
+       "      <td>4f6137c8_dfc5_4043_8005_d617407b7be3</td>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:54.249229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>007046a9_518e_46cb_8e70_e598b8bce831</td>\n",
+       "      <td>links</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cleaned_links</td>\n",
+       "      <td>51fb56f4_5217_4108_a212_2d05806b16dc</td>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:54.249250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>007046a9_518e_46cb_8e70_e598b8bce831</td>\n",
+       "      <td>links</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cleaned_links</td>\n",
+       "      <td>5bdab212_3d82_4eca_8c5a_39e1c8ded842</td>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:54.249270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>007046a9_518e_46cb_8e70_e598b8bce831</td>\n",
+       "      <td>links</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cleaned_links</td>\n",
+       "      <td>70ce196e_9cb7_4467_b1a8_c40400f6f5df</td>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:54.249287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100548</th>\n",
+       "      <td>ffd2d86c_05c1_4607_a5b1_4ab04b77ee41</td>\n",
+       "      <td>results</td>\n",
+       "      <td>False</td>\n",
+       "      <td>results</td>\n",
+       "      <td>e05ddb8f_c572_4d28_9ffb_8e24bbf2027a</td>\n",
+       "      <td>results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...</td>\n",
+       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:55.489539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100549</th>\n",
+       "      <td>ffd9d901_2127_4048_8f9a_805e3fa4930c</td>\n",
+       "      <td>results</td>\n",
+       "      <td>False</td>\n",
+       "      <td>results</td>\n",
+       "      <td>ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47</td>\n",
+       "      <td>results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...</td>\n",
+       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:55.489550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100550</th>\n",
-       "      <td>results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...</td>\n",
+       "      <td>ffebc346_5c58_4d73_8866_1746dedadc50</td>\n",
+       "      <td>results</td>\n",
+       "      <td>False</td>\n",
+       "      <td>results</td>\n",
+       "      <td>ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47</td>\n",
+       "      <td>results__ffebc346_5c58_4d73_8866_1746dedadc50_...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:55.489562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100551</th>\n",
-       "      <td>results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...</td>\n",
+       "      <td>ffec2848_65c7_44d1_8f15_8bd08e2d41f0</td>\n",
+       "      <td>results</td>\n",
+       "      <td>False</td>\n",
+       "      <td>results</td>\n",
+       "      <td>ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47</td>\n",
+       "      <td>results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:55.489573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100552</th>\n",
-       "      <td>results__ffebc346_5c58_4d73_8866_1746dedadc50_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100553</th>\n",
-       "      <td>results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100554</th>\n",
+       "      <td>fffb0445_9107_4105_9f83_2530c19fb4c9</td>\n",
+       "      <td>results</td>\n",
+       "      <td>False</td>\n",
+       "      <td>results</td>\n",
+       "      <td>ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47</td>\n",
        "      <td>results__fffb0445_9107_4105_9f83_2530c19fb4c9_...</td>\n",
        "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-18 20:36:55.489586</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100555 rows × 2 columns</p>\n",
+       "<p>100553 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
+       "                            measurement_uuid     type  cleaned         prefix  \\\n",
+       "0       007046a9_518e_46cb_8e70_e598b8bce831    links     True  cleaned_links   \n",
+       "1       007046a9_518e_46cb_8e70_e598b8bce831    links     True  cleaned_links   \n",
+       "2       007046a9_518e_46cb_8e70_e598b8bce831    links     True  cleaned_links   \n",
+       "3       007046a9_518e_46cb_8e70_e598b8bce831    links     True  cleaned_links   \n",
+       "4       007046a9_518e_46cb_8e70_e598b8bce831    links     True  cleaned_links   \n",
+       "...                                      ...      ...      ...            ...   \n",
+       "100548  ffd2d86c_05c1_4607_a5b1_4ab04b77ee41  results    False        results   \n",
+       "100549  ffd9d901_2127_4048_8f9a_805e3fa4930c  results    False        results   \n",
+       "100550  ffebc346_5c58_4d73_8866_1746dedadc50  results    False        results   \n",
+       "100551  ffec2848_65c7_44d1_8f15_8bd08e2d41f0  results    False        results   \n",
+       "100552  fffb0445_9107_4105_9f83_2530c19fb4c9  results    False        results   \n",
+       "\n",
+       "                                  agent_uuid  \\\n",
+       "0       400a3c9b_57ed_4315_9489_917e601f3604   \n",
+       "1       4f6137c8_dfc5_4043_8005_d617407b7be3   \n",
+       "2       51fb56f4_5217_4108_a212_2d05806b16dc   \n",
+       "3       5bdab212_3d82_4eca_8c5a_39e1c8ded842   \n",
+       "4       70ce196e_9cb7_4467_b1a8_c40400f6f5df   \n",
+       "...                                      ...   \n",
+       "100548  e05ddb8f_c572_4d28_9ffb_8e24bbf2027a   \n",
+       "100549  ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47   \n",
+       "100550  ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47   \n",
+       "100551  ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47   \n",
+       "100552  ddd8541d_b4f5_42ce_b163_e3e9bfcd0a47   \n",
+       "\n",
        "                                               table_name  \\\n",
        "0       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
        "1       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
@@ -171,74 +285,80 @@
        "3       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
        "4       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
        "...                                                   ...   \n",
-       "100550  results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...   \n",
-       "100551  results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...   \n",
-       "100552  results__ffebc346_5c58_4d73_8866_1746dedadc50_...   \n",
-       "100553  results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...   \n",
-       "100554  results__fffb0445_9107_4105_9f83_2530c19fb4c9_...   \n",
+       "100548  results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...   \n",
+       "100549  results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...   \n",
+       "100550  results__ffebc346_5c58_4d73_8866_1746dedadc50_...   \n",
+       "100551  results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...   \n",
+       "100552  results__fffb0445_9107_4105_9f83_2530c19fb4c9_...   \n",
        "\n",
-       "                    creation_date  \n",
-       "0      2024-11-18 20:10:38.865040  \n",
-       "1      2024-11-18 20:10:38.865040  \n",
-       "2      2024-11-18 20:10:38.865040  \n",
-       "3      2024-11-18 20:10:38.865040  \n",
-       "4      2024-11-18 20:10:38.865040  \n",
-       "...                           ...  \n",
-       "100550 2024-11-18 20:10:38.865040  \n",
-       "100551 2024-11-18 20:10:38.865040  \n",
-       "100552 2024-11-18 20:10:38.865040  \n",
-       "100553 2024-11-18 20:10:38.865040  \n",
-       "100554 2024-11-18 20:10:38.865040  \n",
+       "                        retrieved                  processed  \n",
+       "0      2024-11-18 20:10:38.865040 2024-11-18 20:36:54.249173  \n",
+       "1      2024-11-18 20:10:38.865040 2024-11-18 20:36:54.249229  \n",
+       "2      2024-11-18 20:10:38.865040 2024-11-18 20:36:54.249250  \n",
+       "3      2024-11-18 20:10:38.865040 2024-11-18 20:36:54.249270  \n",
+       "4      2024-11-18 20:10:38.865040 2024-11-18 20:36:54.249287  \n",
+       "...                           ...                        ...  \n",
+       "100548 2024-11-18 20:10:38.865040 2024-11-18 20:36:55.489539  \n",
+       "100549 2024-11-18 20:10:38.865040 2024-11-18 20:36:55.489550  \n",
+       "100550 2024-11-18 20:10:38.865040 2024-11-18 20:36:55.489562  \n",
+       "100551 2024-11-18 20:10:38.865040 2024-11-18 20:36:55.489573  \n",
+       "100552 2024-11-18 20:10:38.865040 2024-11-18 20:36:55.489586  \n",
        "\n",
-       "[100555 rows x 2 columns]"
+       "[100553 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Set the repsonse format for clickhouse.\n",
-    "config.response_format=\"JSONCompact\"\n",
-    "\n",
     "@dataclass\n",
-    "class TableNames():\n",
+    "class MeasurementTable():\n",
+    "    measurement_uuid: str \n",
+    "    type: str \n",
+    "    cleaned: bool \n",
+    "    prefix: str \n",
+    "    agent_uuid: str \n",
     "    table_name: str \n",
-    "    creation_date: datetime\n",
+    "    retrieved: datetime\n",
+    "    processed: datetime\n",
     "\n",
-    "async def download_all_table_names() -> pd.DataFrame:\n",
-    "    df_list = []\n",
-    "    with ff.TemporaryFile() as temp:\n",
-    "        query_string = \"show tables\"\n",
+    "async def main():\n",
+    "    input_tables_df = pd.read_feather(input_tables_name)\n",
     "\n",
-    "        with tqdm(desc=\"Running the query result\", unit=\"MB\") as pb:\n",
-    "            # Run async downloader\n",
-    "            async for chunk in tqdm(common.run_query(config, query_string)):\n",
-    "                temp.write(chunk)\n",
-    "                pb.update(len(chunk) // config.chunk_size)\n",
-    "        current_time = datetime.now()\n",
-    "        temp.close()\n",
+    "    measurement_tables = []\n",
     "\n",
-    "        with open(temp.filename, \"r\") as tmpr:\n",
-    "            json_object = json.load(tmpr)\n",
+    "    for index, row in tqdm(input_tables_df.iterrows()):\n",
+    "        table_name = row['table_name']\n",
+    "        creation_date = row['creation_date']\n",
     "\n",
-    "        for record in json_object['data']:\n",
-    "            name = record[0]\n",
-    "            df_list.append(TableNames(\n",
-    "                table_name=name,\n",
-    "                creation_date=current_time\n",
-    "            ))\n",
+    "        split_array = table_name.split(\"__\")\n",
+    "        if len(split_array) != 3:\n",
+    "            continue\n",
     "\n",
-    "    return pd.DataFrame(df_list)\n",
+    "        prefix, measurement_uuid, agent_uuid = split_array\n",
+    "        \n",
+    "        measurement_tables.append(MeasurementTable(\n",
+    "            measurement_uuid=measurement_uuid,\n",
+    "            agent_uuid=agent_uuid,\n",
+    "            prefix=prefix,\n",
+    "            cleaned=\"clean\" in prefix,\n",
+    "            table_name=table_name,\n",
+    "            type=prefix.replace(\"cleaned_\", \"\"),\n",
+    "            retrieved=creation_date,\n",
+    "            processed=datetime.now()\n",
+    "        ))\n",
     "\n",
-    "df = await download_all_table_names()\n",
-    "df"
+    "    return pd.DataFrame(measurement_tables)\n",
+    "\n",
+    "measurement_tables_df = await main()\n",
+    "measurement_tables_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +370,7 @@
     }
    ],
    "source": [
-    "ff.save_dataframe_feather(df, \"../data/tables/\", prefix=\"tables-\")\n",
+    "ff.save_dataframe_feather(measurement_tables_df, \"../data/measurements\")\n",
     "print(\"Done\")"
    ]
   },
