Add latest version

--- a/workflows/table_downloader.ipynb
+++ b/workflows/table_downloader.ipynb
@@ -9,12 +9,15 @@
     "\n",
     "__date__: 2024-11-18\n",
     "\n",
+    "__inputs__:\n",
+    " - Direct query to the clickhouse\n",
+    "\n",
     "__goal__: This notebook downloads the latest table names to the data folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [00:01,  5.29it/s]lt: 8MB [00:01,  6.07MB/s]\n",
-      "Running the query result: 8MB [00:01,  4.69MB/s]\n"
+      "9it [00:01,  6.71it/s]lt: 8MB [00:01,  8.82MB/s]\n",
+      "Running the query result: 8MB [00:01,  5.95MB/s]\n"
      ]
     },
     {
@@ -106,27 +109,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>cleaned_links__007046a9_518e_46cb_8e70_e598b8b...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -134,33 +137,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100550</th>\n",
+       "      <th>100590</th>\n",
        "      <td>results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100551</th>\n",
+       "      <th>100591</th>\n",
        "      <td>results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100552</th>\n",
+       "      <th>100592</th>\n",
        "      <td>results__ffebc346_5c58_4d73_8866_1746dedadc50_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100553</th>\n",
+       "      <th>100593</th>\n",
        "      <td>results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100554</th>\n",
+       "      <th>100594</th>\n",
        "      <td>results__fffb0445_9107_4105_9f83_2530c19fb4c9_...</td>\n",
-       "      <td>2024-11-18 20:10:38.865040</td>\n",
+       "      <td>2024-11-19 00:04:17.845212</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100555 rows × 2 columns</p>\n",
+       "<p>100595 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -171,29 +174,29 @@
        "3       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
        "4       cleaned_links__007046a9_518e_46cb_8e70_e598b8b...   \n",
        "...                                                   ...   \n",
-       "100550  results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...   \n",
-       "100551  results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...   \n",
-       "100552  results__ffebc346_5c58_4d73_8866_1746dedadc50_...   \n",
-       "100553  results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...   \n",
-       "100554  results__fffb0445_9107_4105_9f83_2530c19fb4c9_...   \n",
+       "100590  results__ffd2d86c_05c1_4607_a5b1_4ab04b77ee41_...   \n",
+       "100591  results__ffd9d901_2127_4048_8f9a_805e3fa4930c_...   \n",
+       "100592  results__ffebc346_5c58_4d73_8866_1746dedadc50_...   \n",
+       "100593  results__ffec2848_65c7_44d1_8f15_8bd08e2d41f0_...   \n",
+       "100594  results__fffb0445_9107_4105_9f83_2530c19fb4c9_...   \n",
        "\n",
        "                    creation_date  \n",
-       "0      2024-11-18 20:10:38.865040  \n",
-       "1      2024-11-18 20:10:38.865040  \n",
-       "2      2024-11-18 20:10:38.865040  \n",
-       "3      2024-11-18 20:10:38.865040  \n",
-       "4      2024-11-18 20:10:38.865040  \n",
+       "0      2024-11-19 00:04:17.845212  \n",
+       "1      2024-11-19 00:04:17.845212  \n",
+       "2      2024-11-19 00:04:17.845212  \n",
+       "3      2024-11-19 00:04:17.845212  \n",
+       "4      2024-11-19 00:04:17.845212  \n",
        "...                           ...  \n",
-       "100550 2024-11-18 20:10:38.865040  \n",
-       "100551 2024-11-18 20:10:38.865040  \n",
-       "100552 2024-11-18 20:10:38.865040  \n",
-       "100553 2024-11-18 20:10:38.865040  \n",
-       "100554 2024-11-18 20:10:38.865040  \n",
+       "100590 2024-11-19 00:04:17.845212  \n",
+       "100591 2024-11-19 00:04:17.845212  \n",
+       "100592 2024-11-19 00:04:17.845212  \n",
+       "100593 2024-11-19 00:04:17.845212  \n",
+       "100594 2024-11-19 00:04:17.845212  \n",
        "\n",
-       "[100555 rows x 2 columns]"
+       "[100595 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
