--- a/workflows/measurement_ip_data_downloader copy.ipynb
+++ b/workflows/measurement_ip_data_downloader copy.ipynb
@@ -36,7 +36,7 @@
     "from dataclasses import dataclass\n",
     "import json\n",
     "from datetime import datetime\n",
-    "from tqdm.asyncio import tqdm\n",
+    "from tqdm import tqdm\n",
     "import asyncio\n",
     "import os\n",
     "import ipaddress\n",
@@ -107,12 +107,14 @@
     "    raw_response = await common.quick_query(cfg, q_size)\n",
     "    return int(raw_response.decode())\n",
     "\n",
-    "async def get_results_table_optimized(m: objects.Measurement, num_rows: int, limit: int=1):\n",
+    "async def get_results_table_optimized(m: objects.Measurement, num_rows: int, limit: int=1, pbar: tqdm=None, pbar_update=100):\n",
     "    # Define the packing/compression function\n",
-    "    def from_csv_to_int(binary_data: bytes):\n",
-    "        a, b = binary_data[:-1].split(b',')\n",
+    "    def from_csv_to_int(binary_data: str) -> tuple[bytes, bool]:\n",
+    "        if not isinstance(binary_data, str):\n",
+    "            raise Exception(\"Given wrong type!\")\n",
+    "        \n",
+    "        a, b = binary_data.split(',')\n",
     "        a, b = a[1:-1], b[1:-1]\n",
-    "        a, b = a.decode(), b.decode()\n",
     "        a, b = ipaddress.IPv6Address(a).ipv4_mapped, ipaddress.IPv6Address(b).ipv4_mapped\n",
     "\n",
     "        if a == None or b == None:\n",
@@ -128,7 +130,6 @@
     "\n",
     "    # Set the quert string\n",
     "    q = f\"select probe_dst_prefix, reply_src_prefix from {m.table_name}{'' if limit == 0 else ' limit ' + str(limit)}\"\n",
-    "    q_size = f\"select count(*) from {m.table_name}\"\n",
     "\n",
     "    # Determine the name of the binary data\n",
     "    filepath = f\"../data/ip_data/{m.measurement_uuid}-{ff.get_timestr()}/{m.table_name}.bin\"\n",
@@ -136,34 +137,49 @@
     "    num_pairs_expected = num_rows\n",
     "    \n",
     "    try:\n",
-    "        with ff.BinaryFile(filepath) as bf:\n",
-    "            async for row in tqdm(common.run_query_iter_lines(cfg, q), desc=\"Downloading to binary data\"):\n",
-    "                row: bytes\n",
-    "                b, ok = from_csv_to_int(row)\n",
-    "                if not ok: continue\n",
-    "                num_pairs_written += 1\n",
+    "        # with ff.BinaryFile(filepath) as bf:\n",
+    "        async for row in common.run_query_iter_lines(cfg, q):\n",
+    "            b, ok = from_csv_to_int(row)\n",
+    "            if not ok: continue\n",
+    "            num_pairs_written += 1\n",
     "\n",
-    "                if num_pairs_written % 1000:\n",
-    "                    print(f\"from {m.table_name} done {}\")\n",
-    "                bf.write(b)\n",
-    "    except Exception:\n",
+    "            # pbar.update(6 / (1024*1024)) # one row is 6 bytes\n",
+    "            pbar.update(1)\n",
+    "\n",
+    "                # bf.write(b) # writes 6 bytes each time.\n",
+    "    except Exception as e:\n",
     "        print(f\"Exception on {m.table_name}, exitting\")\n",
-    "        return False, num_pairs_expected, num_pairs_written\n",
+    "        raise e\n",
+    "        return (False, num_pairs_expected, num_pairs_written)\n",
     "\n",
-    "    return True, num_pairs_expected, num_pairs_written\n",
+    "    return (True, num_pairs_expected, num_pairs_written)\n",
     "\n",
     "async def get_results_table_optimized_from_list(m_list: list[objects.Measurement], limit: int=1):\n",
-    "    num_rows = await asyncio.gather(*[get_number_of_row(m) for m in m_list])\n",
-    "    print(f\"Will download total of {sum(num_rows)} row(s)\")\n",
+    "    num_rows_list = await asyncio.gather(*[get_number_of_row(m) for m in m_list])\n",
+    "    if limit == 0:\n",
+    "        num_rows_c = sum(num_rows_list)\n",
+    "        num_rows_tqdm = num_rows_c\n",
+    "    else:\n",
+    "        num_rows_c = limit\n",
+    "        num_rows_tqdm = limit * len(m_list)\n",
     "\n",
-    "    return await asyncio.gather(*[get_results_table_optimized(m, num_rows, limit=limit) for m, num_rows in zip(m_list, num_rows)])\n",
+    "    # One row is 6 bytes\n",
+    "    # Bytes\n",
+    "    total_mb = round((6 * num_rows_c) / (1024*1024), ndigits=2) + 1\n",
+    "    print(f\"Will download total of {num_rows_c} row(s) and {total_mb} MB.\")\n",
     "\n",
-    "ok_expected_writted_list = await get_results_table_optimized_from_list(selected_measurements_list, limit=10000)\n",
-    "# await get_results_table_optimized(selected_measurements_list[0], limit=1)\n",
+    "    # pbar = tqdm(total=num_rows_tqdm, desc=\"Downloading\", ncols=200)\n",
+    "    # r = await asyncio.gather(*[get_results_table_optimized(m, nr, limit=limit, pbar=pbar) for m, nr in zip(m_list, num_rows_list)])\n",
+    "    # pbar.close()\n",
+    "    # return r\n",
     "\n",
-    "for m, (ok, expected, written) in zip(selected_measurements_list, ok_expected_writted_list):\n",
-    "    print(f\"For agent {m.agent_uuid} {written}/{expected} pairs are saved with {'success' if ok else 'error'}\")\n",
-    "\n"
+    "# ok_expected_writted_list = await get_results_table_optimized_from_list(selected_measurements_list, limit=0)\n",
+    "\n",
+    "# for m, ok_exp_writ in zip(selected_measurements_list, ok_expected_writted_list):\n",
+    "#     ok, expected, written = ok_exp_writ\n",
+    "#     print(f\"For agent {m.agent_uuid} {written}/{expected} pairs are saved with {'success' if ok else 'error'}\")\n",
+    "\n",
+    "# await get_results_table_optimized(selected_measurements_list[0], 1, limit=1)"
    ]
   },
   {
@@ -171,7 +187,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_number_of_pairs = sum(await asyncio.gather(*[get_number_of_row(m) for m in selected_measurements_list]))\n",
+    "total_number_of_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_number_of_pairs_per_table = total_number_of_pairs // len(selected_measurements_list)\n",
+    "avg_number_of_pairs_per_table"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,7 +274,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(b)\n",
+    "b[::8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"aAbBcCdDeEfFgGhH\"\n",
+    "row_size = 2\n",
+    "offset = 0\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    print(a[offset:offset + row_size])\n",
+    "    offset += row_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "import ipaddress\n",
+    "\n",
+    "def bytes_consumer(buffer_bytes: bytes):\n",
+    "    row_size = 32\n",
+    "    ipv6_size = 16\n",
+    "    new_row_size = 6\n",
+    "    num_pairs = len(buffer_bytes) // row_size # each row is 32 bytes\n",
+    "    new_buffer_size = num_pairs * new_row_size # Each row will be 6 bytes in the new one\n",
+    "\n",
+    "    new_buffer = io.BytesIO()\n",
+    "    new_buffer.truncate(new_buffer_size)\n",
+    "\n",
+    "    offset = 0\n",
+    "    for _ in tqdm(range(num_pairs)):\n",
+    "        row = buffer_bytes[offset: offset + row_size]\n",
+    "        \n",
+    "        first = buffer_bytes[offset:offset + ipv6_size]\n",
+    "        second = buffer_bytes[offset + ipv6_size:offset + row_size]\n",
+    "\n",
+    "        first_address = ipaddress.ip_address(first).ipv4_mapped\n",
+    "        second_address = ipaddress.ip_address(second).ipv4_mapped\n",
+    "\n",
+    "        if first_address == None or second_address == None:\n",
+    "            print(\"Invalid IPv6 Addresses, this might be a problem.\")\n",
+    "\n",
+    "        new_buffer.write(first_address.packed[:-1])\n",
+    "        new_buffer.write(second_address.packed[:-1])\n",
+    "\n",
+    "        offset += row_size\n",
+    "\n",
+    "    new_buffer.seek(0)\n",
+    "    return new_buffer\n",
+    "\n",
+    "\n",
+    "num_in_long_bytes = 75_830_108 # average number of paris per agent\n",
+    "num_in_long_bytes = 1_000_000\n",
+    "long_bytes = b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\x01\\x02\\xf1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xff\\xff\\xb4\\xb4\\xf8\\x00' * num_in_long_bytes\n",
+    "buf = bytes_consumer(long_bytes)\n",
+    "bytes_from_buffer = buf.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ip_addresses = [ipaddress.ip_address(ip) for ip in bytes_from_buffer[:32*3:3]]\n",
+    "ip_addresses\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_cfg = Config()\n",
+    "test_cfg.response_format = \"RowBinary\"\n",
+    "await common.quick_query(test_cfg, 'with [1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] as ii select ii')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
   }
  ],
  "metadata": {
