--- a/workflows/measurement_ip_data_downloader copy.ipynb
+++ b/workflows/measurement_ip_data_downloader copy.ipynb
@@ -374,12 +374,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "size_written_on_disk = 114289026 + 113705742 + 113526066 + 113930316 + 113719818 + 113590236 + 113878074 + 113351982 + 113993676 + 113611224\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1084.896240234375"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size_written_on_disk / (1024 * 1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
